# react-scuba

./: $ApiEnvPath  $TailwindConfigPath  $WebEnvPath  .copilotignore  .devcontainer.json  .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .markdownlintrc  .npmrc  .prettierignore  .prettierrc  .prettierrc.json  .size-limit.json  .swcrc  .turboignore  .yaml-language-server.yml  .yamlvalidation  BLEEDING_EDGE.md  BLEEDING_EDGE_MODERNIZATION_COMPLETE.md  CLUSTER_SETUP.md  CODE_MAINTENANCE_SUMMARY.md  CODE_MAINTENANCE_SUMMARY_PHASE2.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CSS_ENHANCEMENTS.md  DEVCONTAINER_IMPLEMENTATION.md  DEVCONTAINER_VALIDATION_RESULTS.md  DEVELOPMENT.md  DEVELOPMENT_DEBT.md  DOCUMENTATION_IMPLEMENTATION.md  Dockerfile.gpu  ENTERPRISE_REFACTORING.md  EXTRACTION_GUIDE.md  EXTRACTION_README.md  FOUNDATION_STANDARDS.md  IMPLEMENTATION_SUMMARY.md  (+51 more)
.config/: commands.yml  grafana.yml  mcp.yml  prometheus.yml  services.yml
.config.archive/: postgres.yml  services.yml
.config.archive/assets/: nginx-health.conf
.config/assets/: devcontainer.env  init.sql
.copilot/: .markdownlint.json  AI-AGENT-GUIDE.md  toc.yml
.copilot-tracking/: 20251029-devcontainer-cluster-analysis-changes.md  20251029-devcontainer-cluster-analysis-details.md  20251029-devcontainer-cluster-analysis-final-report.md  20251029-devcontainer-cluster-analysis-plan.instructions.md  20251029-devcontainer-cluster-analysis-research.md
.copilot-tracking/changes/: 20251027-react-scuba-complete-refactoring-changes.md  20251029-oversight-remediation-changes.md  20251029-post-implementation-changes.md  20251029-vscode-language-server-changes.md
.copilot-tracking/details/: 20251027-react-scuba-complete-refactoring-details.md  20251029-oversight-remediation-details.md  20251029-post-implementation-details.md  20251029-vscode-language-server-details.md
.copilot-tracking/plans/: 20251027-react-scuba-complete-refactoring-plan.instructions.md  20251029-critical-infrastructure-plan.instructions.md  20251029-oversight-remediation-plan.instructions.md  20251029-post-implementation-plan.instructions.md  20251029-vscode-language-server-plan.instructions.md
.copilot-tracking/prompts/: implement-critical-infrastructure.prompt.md  implement-oversight-remediation.prompt.md  (+3 more)
.devcontainer/: DIAGNOSTIC_NOTES.md  Dockerfile  Dockerfile.db  Dockerfile.dev  README.md  TOC-USAGE.md  TODO.md  devcontainer-toc.schema.json  devcontainer-toc.yml  devcontainer.dockerfile  devcontainer.env  devcontainer.json  devcontainer.minimal  devcontainer.minimal.dockerfile  docker-compose.mcp.yml  docker-compose.yml  dockerfile.bootstrap  mcp-servers.json  supervisord.conf  validate-toc.ps1
.github/: EXTRACTION_CHECKLIST.md  MCP-QUICK-START.md  MCP-SERVERS.md  WORKFLOW_UPDATES.md  build-mcp-servers.ps1  copilot-instructions.md  dependabot.yml  docker-compose.mcp.yml  fetch.dockerfile  filesystem.dockerfile  git.dockerfile  github.dockerfile  memory.dockerfile  postgres.dockerfile  sqlite.dockerfile
.husky/: commit-msg  pre-commit  prepare-commit-msg
.scrapers/: download-images.js  scrape-all.js  scrape-osdiving-puppeteer.js
docker-compose-examples/: CHANGELOG.md  DEVELOPMENT.md  README.md  TESTING.md  validate_stacks.py
docker-compose-examples/mcp/python_utils/: Dockerfile  README.md  __init__.py  doc_utils.py  docker-compose.yml  pyproject.toml
docker-compose-examples/mcp/python_utils/dockerfiles/: README.md  python.Dockerfile
docker-compose-examples/mcp/python_utils/react_scuba_utils/: __init__.py  api.py
docker-compose-examples/mcp/python_utils/react_scuba_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker-compose-examples/mcp/python_utils/react_scuba_utils/cli/: main.py
docker-compose-examples/mcp/python_utils/react_scuba_utils/config/: __init__.py  config.py  settings.py
docker-compose-examples/mcp/python_utils/react_scuba_utils/core/: utils.py
docker-compose-examples/mcp/python_utils/react_scuba_utils/mcp/: server.py
docker-compose-examples/mcp/python_utils/react_scuba_utils/models/: __init__.py  models.py
docker-compose-examples/mcp/python_utils/react_scuba_utils/services/: __init__.py  component_inventory.py  file_operations.py  link_checker.py
docker-compose-examples/mcp/python_utils/src/react_scuba_utils/: __init__.py  health.py  mcp_server.py
docker-compose-examples/mcp/python_utils/tests/: api_mock.py  database_mock.py  redis_mock.py  test_mcp_utils.py
docs/: ADWORDS.md  MULTI_INDUSTRY.md  README.md  SETUP.md  SUBMODULE_INDEX.md  TODO.md  changelog.md  contributing.md  docker-compose-submodule.md  index.md  submodule-quick-reference.md  submodule-visualization.md  toc.yml
public/: robots.txt
python_utils/: __init__.py  conftest.py  doc_utils.py  pyproject.toml  requirements.txt
python_utils/react_scuba_utils/: api.py
python_utils/react_scuba_utils.egg-info/: entry_points.txt
python_utils/react_scuba_utils/config/: config.py  settings.py
python_utils/react_scuba_utils/core/: __init__.py  utils.py
python_utils/react_scuba_utils/models/: models.py
python_utils/react_scuba_utils/services/: component_inventory.py  file_operations.py  link_checker.py
python_utils/tests/: conftest.py  redis_mock.py
scripts/: README.md  check-node-modules.sh  consolidate-css.js  extract-docker-compose-examples.sh  validate-cluster.ps1  verify-submodule-setup.sh
server/: .biomeignore  .copilotignore  .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  BUILD_ENHANCEMENTS.txt  CODE_STANDARDS.md  Dockerfile  MODERNIZATION_REVIEW.md  TODO.md  eslint.config.js  index.js  package-lock.json  package.json  turbo.json  vitest.config.js
specs/: README.md  architecture.spec.json  bleeding-edge.spec.json  multi-tenant.spec.json
src/: App.jsx  App.test.jsx  index.css  index.jsx  reportWebVitals.js  setupTests.js
tests/: AboutPage.test.jsx  App.test.jsx  CoursesPage.test.jsx  DiveSitesPage.test.jsx  GalleryPage.test.jsx  HomePage.test.jsx  docs-validation.test.js  global-setup.js  link-checker.test.js
(+924 files in other folders)
